--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 #header{
     width: 100%;
     height: 150vh;
-    background-image: url(images/3rd.png);
+    background-image: url(3rd.png);
     background-size: cover;
     background-position: center;
     position: relative;
