--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ html{
 body{
     background: #080808;
     color: #fff;
+    margin:0;
+    padding:0;
 }
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(3rd.png);
+    background-image: url(1st.png);
     background-size: cover;
     background-position: center;
 }
