--- a/style.css
+++ b/style.css
@@ -11,15 +11,19 @@ html{
 body{
     background: #080808;
     color: #fff;
-    margin:0;
-    padding:0;
+    
+  
 }
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(1st.png);
+    background-image: url(3rd.png);
     background-size: cover;
     background-position: center;
+    position:relative;
+    overflow: hidden;
+    margin:0;
+    background-attachment: fixed;
 }
 /* nav img{
     height: 100px;
