--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #1900ff;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -75,7 +75,7 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 .header-text h1 span{
-    color: #ff004f;
+    color: #1900ff;
 }
 /* -----------------about-------------- */
 #about{
@@ -120,7 +120,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background:#ff004f;
+    background:#1900ff;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -181,7 +181,7 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .services-list div:hover{
-    background: #ff004f;
+    background: #1900ff;
     transform: translateY(-10px);
 }
 /* -------------work----------- */
@@ -205,7 +205,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6),#1900ff);
     border-radius: 10px;
     position: absolute;
     left:0;
@@ -227,7 +227,7 @@ nav ul li a:hover::after{
 }
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #1900ff;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
@@ -247,7 +247,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #1900ff;
 
     padding: 14px 50px;
     border-radius: 6px;
@@ -257,7 +257,7 @@ nav ul li a:hover::after{
 
 }
 .btn:hover{
-    background: #ff004f;
+    background: #1900ff;
 
 }
 /* ---------------contact=------------- */
@@ -272,7 +272,7 @@ nav ul li a:hover::after{
 margin-top: 30px;
 }
 .contact-left p i{
-    color: #ff004f;
+    color: #1900ff;
     margin-top: 15px;
     font-size: 25px;
 }
@@ -288,12 +288,12 @@ margin-top: 30px;
     transition: transform 0.5s;
 }
 .social-icon a:hover{
-    color: #ff004f;
+    color: #1900ff;
     transform: translateY(-5px);
 }
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #1900ff;
 }
 .contact-right form{
     width: 100%;
@@ -348,7 +348,7 @@ nav .fas {
     }
 
     nav ul {
-        background: #ff004f;
+        background:#1900ff;
         position: fixed;
         top: 0;
         right: -200px;
