--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ nav ul li a:hover::after{
 
 }
 .tab-contents ul li span{
-    color: #b54769;
+    color: #1900ff;
     font-size: 14px;
 }
 .tab-contents{
