--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     
   
 }
+
 #header{
     width: 100%;
     height: 100vh;
@@ -38,9 +39,9 @@ nav{
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.logo{
-    width: 40px;
-
+.logo {
+    width: 90px;
+    height: 80px;
 }
 nav ul li{
     display: inline-block;
