--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(WhatsApp_Image_2025-01-02_at_16.24.52_613cb88c-removebg-preview.png);
+    background-image: url('WhatsApp_Image_2025-01-02_at_16.24.52_613cb88c-removebg-preview.png');
     background-size: cover;
     background-position: center;
     position:relative;
