--- a/style.css
+++ b/style.css
@@ -331,7 +331,8 @@ nav .fas {
 
 @media only screen and (max-width: 600px) {
     #header {
-        background-image: url(1st.png);
+        background-image: url('WhatsApp_Image_2025-01-02_at_16.24.52_613cb88c-removebg-preview.png');
+
     }
 
     .header-text {
